k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sim-prov
  labels:
    app.kubernetes.io/name: sim-prov
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sim-prov
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 8000
      targetPort: http
      protocol: TCP
